# settingsd

./: .pylintrc  README.md  org.os.settingsd.conf  pyproject.toml  settingsd.service  setup.py
settingsd/: __init__.py  main.py
settingsd/display/: __init__.py  arrangement.py  display.py  layout.py  service.py
tests/: test_arrangement.py  test_layout.py
